force-app/main/default/unpackaged/objects/HandsMen_Product__c.object
<CustomObject>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SKU__c</fullName>
        <label>SKU</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stock_Quantity__c</fullName>
        <label>Stock Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>HandsMen Product</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>HandsMen Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>HandsMen Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>